; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_file.c_buf_file_get_size.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_file.c_buf_file_get_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf_file_priv = type { i32 }

@SEEK_CUR = common dso_local global i32 0, align 4
@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @buf_file_get_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_file_get_size(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.buf_file_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.buf_file_priv* @get_priv_file(i32* %6)
  store %struct.buf_file_priv* %7, %struct.buf_file_priv** %3, align 8
  %8 = load %struct.buf_file_priv*, %struct.buf_file_priv** %3, align 8
  %9 = getelementptr inbounds %struct.buf_file_priv, %struct.buf_file_priv* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @SEEK_CUR, align 4
  %12 = call i32 @r_sandbox_lseek(i32 %10, i32 0, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load %struct.buf_file_priv*, %struct.buf_file_priv** %3, align 8
  %14 = getelementptr inbounds %struct.buf_file_priv, %struct.buf_file_priv* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @SEEK_END, align 4
  %17 = call i32 @r_sandbox_lseek(i32 %15, i32 0, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load %struct.buf_file_priv*, %struct.buf_file_priv** %3, align 8
  %19 = getelementptr inbounds %struct.buf_file_priv, %struct.buf_file_priv* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @SEEK_SET, align 4
  %23 = call i32 @r_sandbox_lseek(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local %struct.buf_file_priv* @get_priv_file(i32*) #1

declare dso_local i32 @r_sandbox_lseek(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
